spacing issues in heatmap

--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -84,8 +84,6 @@ article {
     width: 100%;
     margin: 0 auto;
     padding: 20px; }
-  article .heat {
-    margin: 2em 0; }
   article .show {
     margin-left: 0;
     padding: 3em;
@@ -192,9 +190,6 @@ small, .font_small {
 
 form {
   text-align: left; }
-
-svg {
-  margin: 0 auto; }
 
 .axis path,
 .axis line {
