--- a/stylesheets/scss/_charts.scss
+++ b/stylesheets/scss/_charts.scss
@@ -1,6 +1,4 @@
-svg {
-  margin: 0 auto;
-}
+
 .axis path,
 .axis line {
   fill: none;
