--- a/stylesheets/scss/_layout.scss
+++ b/stylesheets/scss/_layout.scss
@@ -49,7 +49,7 @@ article {
     padding: 20px;
   }
   .heat {
-    margin: 2em 0;
+    // margin: 2em 0;
   }
   .show {
     margin-left: 0;
